# ComfyUI-SDMatte

./: .gitattributes  .gitignore  README.md  README_CN.md  __init__.py  pyproject.toml  requirements.txt  sdmatte_nodes.py
.github/workflows/: publish.yml
example_workflow/: example_workflow.json  超强抠图遮罩细化工作流.json
src/: .gitignore  README.md  criterion.py  evaluation.py  inference.py  process_weight.py  requirements.txt
src/configs/: SDMatte.py
src/data/: __init__.py  dataset.py  prefetcher.py
src/data/txt/: AIM_500_transparent_samples.txt  Composition_1k_transparent_samples.txt  DIS_646_transparent_samples.txt  RefMatte_10k_image_samples.txt  RefMatte_10k_mask_samples.txt
src/modeling/SDMatte/: meta_arch.py
src/script/: test.sh
src/utils/: evaluate.py  logger.py  replace.py
