[project]
name = "sdmatte"
description = "SDMatte is an interactive image matting method based on stable diffusion, which supports three types of visual prompts (points, boxes, and masks) for accurately extracting target objects from natural images."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["diffusers>=0.25.0", "transformers>=4.38.0", "timm>=0.9.7", "einops>=0.7.0", "easydict>=1.10", "omegaconf>=2.3.0", "fvcore>=0.1.5.post20221221", "torchvision>=0.16.0", "opencv-python>=4.8.0", "safetensors>=0.4.0"]

[project.urls]
Repository = "https://github.com/flybirdxx/ComfyUI-SDMatte"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/flybirdxx/ComfyUI-SDMatte/wiki"
"Bug Tracker" = "https://github.com/flybirdxx/ComfyUI-SDMatte/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SDMatte"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

